[package]
name = "pywordfreq"
version = "0.2.2"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2018"
description = "Word frequency checker based on Wikipedia corpus written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pywordfreq"
homepage = "https://github.com/intsights/pywordfreq"
license = "MIT"
keywords = [
    "word",
    "frequency",
    "frequencies",
    "rust",
    "pyo3",
]

[package.metadata.maturin]
requires-python = ">=3.7"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Rust",
]

[lib]
name = "pywordfreq"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.7"
suffix = "1.2"
once_cell = "1.8"
flate2 = { version = "1", features = ["zlib-ng-compat"], default-features = false }

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
