[package]
name = "pywordfreq"
version = "0.4.2"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2021"
description = "Word frequency checker based on Wikipedia corpus written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pywordfreq"
homepage = "https://github.com/intsights/pywordfreq"
license = "MIT"
keywords = [
    "word",
    "frequency",
    "frequencies",
    "rust",
    "pyo3",
]

[package.metadata.maturin]

[lib]
name = "pywordfreq"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.7"
flate2 = { version = "1", features = ["zlib-ng-compat"], default-features = false }
memchr = "2.4"
once_cell = "1.9"
suffix = "1.2"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
