[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "src/*",
    "Cargo.toml",
    "pywordfreq/*.py",
    "pywordfreq/*.pyi"
]
manylinux = "2014"
strip = true

[tool.poetry]
name = "pywordfreq"
version = "0.2.2"
authors = ["Gal Ben David <gal@intsights.com>"]
description = ""
readme = "README.md"
repository = "https://github.com/intsights/pywordfreq"
homepage = "https://github.com/intsights/pywordfreq"
license = "MIT"
keywords = [
    "word",
    "frequency",
    "frequencies",
    "rust",
    "pyo3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"
