[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "Cargo.toml",
    "pyproject.toml",
    "pywordfreq/*.gz",
    "pywordfreq/*.py",
    "pywordfreq/*.pyi",
    "src/*",
]


[tool.poetry]
name = "pywordfreq"
version = "0.4.1"
authors = ["Gal Ben David <gal@intsights.com>"]
description = "Word frequency checker based on Wikipedia corpus written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pywordfreq"
homepage = "https://github.com/intsights/pywordfreq"
license = "MIT"
keywords = [
    "word",
    "frequency",
    "frequencies",
    "rust",
    "pyo3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"
